--- a/SEBASTIAN/SLICER_E2E_TESTS/README
+++ b/SEBASTIAN/SLICER_E2E_TESTS/README
@@ -1,20 +1,27 @@
 In order to run the E2E tests for the slicer, you have to perform the following steps:
 
-1. The configuration on both VSMF_APP and NSMF_APP are in the application.properties_VSMF_APP and  application.properties_NSMF_APP, respectively.
+0. Pre-conditions:
 
-2. Run an instance of VSMF_APP
-3. Run an instance of NSMF_APP
-4. Make sure that on the NFVO Catalogue there is NOT any NSD.
+0.1 See commit 015f18b1c7158198e5ce87bdf00b83721b386037 for the application.properties files on VSMF and NSMF for the SS-O NMRO integration test. These configuration are reffered to NXW testbed. Change them according to your config. 
 
-5. Set on the test source code the IP address of VSMF_APP and NSMF_APP
+0.2 The VSMF_APP must be running and reachable
 
-6. You can easily run the test with mvn run command.
+0.3 The NSMF_APP must be running and reachable (At the start up, an NSD is on boarded on the nfvo catalogue (the DUMMY one). It will be used later)
 
+0.4 The NMRO must be running and reachable
 
+0.5 The OSM must be running and reachable
+
+0.6. Set on the test source code the IP address of VSMF_APP and NSMF_APP
+
+You can easily run the test with 'mvn test' command.
+
+----------------------------------------------------------------------------------------------------------
 It performs the following operations:
 1. On NSP side
-  1.1 is performed the login as admin to create a group a new tenant (called tenantNSP) is created in
-  1.2 perform the login with the just created tenant
+  1.1 is performed the login as admin to create a group and a new tenant (called tenantNSP) is created in
+  1.2 perform the login with the just created tenant, thus tenantNSP.
+  1.3. An NST is on boarded: it contains the Id of the NSD on boarded in the step 0.3
 
 The above info are in the related JSON file. Please check the source code for further details.
 
@@ -22,25 +29,24 @@ The above info are in the related JSON file. Please check the source code for fu
 2. On DSP side:
 Perform the login as admin to:
   2.1 create a group a new tenant (called tenantUN) is created in and the SLA
-  2.2 perform the login with the just created tenant
+  2.2 perform the login with the just created tenant, thus tenantUN
 
 The above info are in the related JSON file. Please check the source code for further details.
 
-2.3 It create another tenant, called TenantNot: this tenant is used by the NSP to authenticate and eventually send the notification(s).
-2.4 It create the remote tenant info, those related to the tenant created at the step 1.1, and associated it with the local tenant created at step 2.1.
+2.3 It create another tenant, called TenantNot: this tenant is used by the NSP to authenticate and eventually send the notification(s) to DSP.
+2.4 It create the remote tenant info, those related to the tenant created at the step 1.1, and associated it with the local tenant created at step 2.1. In this way tenantUN can be authenticated with tenantNSP credentials. 
 
 
 3. On NSP side:
-3.1 An association between tenant on DSP created at step 2.3 and local tenant created at step 1.1 is made.
-3.2 An NST is on boarded.
+3.1 An association between tenant on DSP created at step 2.3 and local tenant created at step 1.1 is made. In this way, tenantNSP can authenticate itslef with TenantNot on DSP to send notification.
 
-##
+####
 Briefly there are two associations between tenant and remote tenant:
  On DSP side the tenantUN is associated to tenantNSP on NSP side.
  On NSP side the tenantNSP is associated to tenantNot on DSP side.
-##
+####
 
-4. On DSP SIDE, the on boarding of VSB and then of related VSD is performed and tested.
-5. The VSI instantiation is tested.
-6. The VSI termination is tested.
-7. The VSI purge is tested.
+4. On DSP side, the on boarding of VSB and then of related VSD is performed and tested.
+5. The VSI instantiation is tested. It results as network slice instantiation and Network Service instantation.
+#6. The VSI termination is tested. ## To be done
+#7. The VSI purge is tested. ## To be done
